--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
 		function disableselect(e){ 
@@ -38,7 +39,7 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
-							<div class="js-show-on-scroll">
+							<div class="fade">
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="ml6">
   								<span class="text-wrapper">
@@ -63,7 +64,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<div class="js-show-on-scroll">
+							<div class="fade">
 							<h2><strong>Translation Services</strong></h2>
 							</div>
 						</header>
@@ -72,7 +73,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
+										<div class="fade">
 										<header>
 											<h3>French language specialist</h3>
 										</header>
@@ -86,7 +87,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
+										<div class="fade">
 										<header>
 											<h3>Translation</h3>
 										</header>
