--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
+										<div class="fade">
 										<header>
 											<h3>Proofreading</h3>
 										</header>
@@ -126,7 +126,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container" >
-						<div class="js-show-on-scroll">
+						<div class="fade">
 						<FONT size="2pt"><i>
 							<p>"We are happy with your quality and excellent work."</p>
 							<p>N.Crawford, Washington.</p>
@@ -150,7 +150,7 @@
 
 									<!-- Post -->
 										<article class="box post">
-											<div class="js-show-on-scroll">
+											<div class="fade">
 											<header>
 												<h2><a href="#"><strong>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</strong><br />
 												</a></h2>
@@ -171,7 +171,7 @@
 										<section>
 											<ul class="divided">
 												
-												<div class="js-show-on-scroll">
+												<div class="fade">
 												<li>
 													
 													<!-- Highlight -->
@@ -206,7 +206,7 @@
 
 									<!-- Post -->
 										<article class="box post">
-											<div class="js-show-on-scroll">
+											<div class="fade">
 											<h3>Every project is special.</h3>
 											</div>
 											<ul class="actions">
@@ -215,7 +215,7 @@
 										</article>
 									<!-- Post -->
 										<article class="box post">
-											<div class="js-show-on-scroll">
+											<div class="fade">
 											<header>
 												<h2><a href="#">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
