--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 -->
 <html>
 	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
 		function disableselect(e){ 
@@ -39,7 +38,7 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
-							<div class="fade">
+							<div class="js-show-on-scroll">
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="ml6">
   								<span class="text-wrapper">
@@ -64,7 +63,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<div class="fade">
+							<div class="js-show-on-scroll">
 							<h2><strong>Translation Services</strong></h2>
 							</div>
 						</header>
@@ -73,7 +72,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="fade">
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>French language specialist</h3>
 										</header>
@@ -87,7 +86,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="fade">
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>Translation</h3>
 										</header>
@@ -101,7 +100,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="fade">
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>Proofreading</h3>
 										</header>
@@ -126,7 +125,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container" >
-						<div class="fade">
+						<div class="js-show-on-scroll">
 						<FONT size="2pt"><i>
 							<p>"We are happy with your quality and excellent work."</p>
 							<p>N.Crawford, Washington.</p>
@@ -150,7 +149,7 @@
 
 									<!-- Post -->
 										<article class="box post">
-											<div class="fade">
+											<div class="js-show-on-scroll">
 											<header>
 												<h2><a href="#"><strong>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</strong><br />
 												</a></h2>
@@ -171,7 +170,7 @@
 										<section>
 											<ul class="divided">
 												
-												<div class="fade">
+												<div class="js-show-on-scroll">
 												<li>
 													
 													<!-- Highlight -->
@@ -206,7 +205,7 @@
 
 									<!-- Post -->
 										<article class="box post">
-											<div class="fade">
+											<div class="js-show-on-scroll">
 											<h3>Every project is special.</h3>
 											</div>
 											<ul class="actions">
@@ -215,7 +214,7 @@
 										</article>
 									<!-- Post -->
 										<article class="box post">
-											<div class="fade">
+											<div class="js-show-on-scroll">
 											<header>
 												<h2><a href="#">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
