--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<script src="https://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
 		function disableselect(e){ 
@@ -70,7 +71,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
+										<div class="block revealOnScroll" data-animation="flipInX" data-timeout="400">
 										<header>
 											<h3>French language specialist</h3>
 										</header>
@@ -84,7 +85,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
+										<div class="block revealOnScroll" data-animation="flipInX" data-timeout="400">
 										<header>
 											<h3>Translation</h3>
 										</header>
@@ -98,7 +99,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
+										<div class="block revealOnScroll" data-animation="flipInX" data-timeout="400">
 										<header>
 											<h3>Proofreading</h3>
 										</header>
