--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 -->
 <html>
 	<head>
-		<script src="https://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
 		function disableselect(e){ 
@@ -39,7 +38,7 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
-							<h1 class="revealOnScroll" data-animation="fadeInUp" id="logo"><a href="index.html">Alptra</a></h1>
+							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="ml6">
   								<span class="text-wrapper">
     									<span class="letters">Translating more than words</span>
@@ -71,7 +70,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="block revealOnScroll" data-animation="flipInX" data-timeout="400">
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>French language specialist</h3>
 										</header>
@@ -85,7 +84,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="block revealOnScroll" data-animation="flipInX" data-timeout="400">
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>Translation</h3>
 										</header>
@@ -99,7 +98,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="block revealOnScroll" data-animation="flipInX" data-timeout="400">
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>Proofreading</h3>
 										</header>
