--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 -->
 <html>
 	<head>
+		<title>Motion One: Element-based scroll progress demo</title>
+    <meta charset="UTF-8" />
+    <link href="src/styles.css" rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
 		function disableselect(e){ 
@@ -297,6 +307,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/safe-email@1.1.1/dist/safe-email.min.js"></script>
+			<script src="src/index.js"></script>
 
 	</body>
 </html>
