--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
+										<section><div>
 										<header>
 											<h3>French language specialist</h3>
 										</header>
   										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
 										<p>My name is Tony Foucart, I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
-										</div>
+										</div></section>
 									</section>
 
 							</div>
@@ -295,6 +295,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/safe-email@1.1.1/dist/safe-email.min.js"></script>
+			<script src="src/index.js"></script>
 
 	</body>
 </html>
