--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
+							<div class="js-show-on-scroll">
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="ml6">
   								<span class="text-wrapper">
     									<span class="letters">Translating more than words</span>
   								</span>
 							</p>
+							</div>
 						
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
@@ -68,11 +70,13 @@
 
 								<!-- Feature -->
 									<section>
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>French language specialist</h3>
 										</header>
   										      <section><div><a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a></div></section>
 										<p>My name is Tony Foucart, I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
+										</div>
 									</section>
 
 							</div>
@@ -80,11 +84,13 @@
 
 								<!-- Feature -->
 									<section>
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>Translation</h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
 										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment. All documents will remain strictly confidential.</p>
+										</div>
 									</section>
 
 							</div>
@@ -92,11 +98,13 @@
 
 								<!-- Feature -->
 									<section>
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>Proofreading</h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
 										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked.</p>
+										</div>
 									</section>
 								
 							</div>
@@ -288,7 +296,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="src/index.js"></script>
 			<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/safe-email@1.1.1/dist/safe-email.min.js"></script>
 
 	</body>
