--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 			<!-- Features -->
 				<section id="features">
 					<div class="container">
+						<div class="js-show-on-scroll">
 						<header>
 							<h2><strong>Translation Services</strong></h2>
 						</header>
+						</div>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 
