--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<!-- Logo -->
 							<div class="js-show-on-scroll">
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-    							<p>Translating more than words</p>
+    							<p><strong>Translating more than words</strong></p>
 							</p>
 							</div>
 
