--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
 					<div class="container">
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-    							<p class="ml6">
-  								<span class="text-wrapper">
-    									<span class="letters">Translating more than words</span>
-  								</span>
-							</p>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    							<p>Translating more than words</p>
 
 						<!-- Nav -->
 							<nav id="nav">
