--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
 						<!-- Logo -->
 <div class="js-show-on-scroll">
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-    						        <p><span class="letters">Translating more than words</span></p>
+    						        <p>Translating more than words</p>
 							
 </div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 						<!-- Nav -->
 							<nav id="nav">
