--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 							<div class="js-show-on-scroll">
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
     						        <p class="ml6">
-  								<span class="text-wrapper">
     									<span class="letters">Translating more than words</span>
-  								</span>
 							</p>
 							</div>
+						
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 						<!-- Nav -->
 							<nav id="nav">
