--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 						<!-- Logo -->
 							<div class="js-show-on-scroll">
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-    						        <p class="ml6">
+    						        <p>
+    								<span class="text-wrapper">
     									<span class="letters">Translating more than words</span>
 							</p>
 							</div>
