--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
+							<div>
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
+							</div>
     						        <p class="ml6">
   								<span class="text-wrapper">
     									<span class="letters">Translating more than words</span>
