--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 							<p>"We are happy with your quality and excellent work."</p>
 							<p>N.Crawford, Washington.</p>
 							<p><br>"Our team could not be more satisfied with your work." </p>
-							<p>S. Smith, Los Angeles.</p>
+							<p>K. Smith, Los Angeles.</p>
 							<p><br>"My team were very impressed."</p>
-							<p>K. Green, London.</p>
+							<p>S. Green, London.</p>
 						</i></FONT>
 						</div>
 					</div>
