--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 -->
 <html>
 	<head>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"
+    type="text/javascript"></script>
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
 		function disableselect(e){ 
@@ -60,23 +62,19 @@
 			<!-- Features -->
 				<section id="features">
 					<div class="container">
-						<div class="js-show-on-scroll">
 						<header>
 							<h2><strong>Translation Services</strong></h2>
 						</header>
-						</div>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
 										<header>
 											<h3>French language specialist</h3>
 										</header>
   										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
 										<p>My name is Tony Foucart, I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
-										</div>
 									</section>
 
 							</div>
@@ -84,13 +82,11 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
 										<header>
 											<h3>Translation</h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
 										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment. All documents will remain strictly confidential.</p>
-										</div>
 									</section>
 
 							</div>
@@ -98,13 +94,11 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
 										<header>
 											<h3>Proofreading</h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
 										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked.</p>
-										</div>
 									</section>
 								
 							</div>
