--- a/index.html
+++ b/index.html
@@ -67,19 +67,23 @@
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
-
+								
+								<div id="portfolio">
+            							<div class="col">
+                						<div class="shot">
 								<!-- Feature -->
-									<section>
 										<header>
 											<h3>French language specialist</h3>
 										</header>
   										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
 										<p>My name is Tony Foucart, I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
 									</section>
+		    						 </div>
 
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 
+								<div class="shot">
 								<!-- Feature -->
 									<section>
 										<header>
@@ -88,10 +92,12 @@
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
 										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment. All documents will remain strictly confidential.</p>
 									</section>
+								</div>
 
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 
+								<div class="shot">
 								<!-- Feature -->
 									<section>
 										<header>
@@ -100,6 +106,9 @@
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
 										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked.</p>
 									</section>
+								</div>
+								</div>
+        							</div>
 								
 							</div>
 							<div class="col-12">
