--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3>French language specialist</h3>
+											<h3><FONT COLOR="#0066CC">French language specialist</FONT></h3>
 										</header>
   										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
 										<p>My name is Tony Foucart, I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
