--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3>Proofreading</h3>
+											<h3><FONT COLOR="#0066CC">Proofreading</FONT></h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
 										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked.</p>
