--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<div class="container">
 						<div class="js-show-on-scroll">
 						<header>
-							<h2><strong><FONT COLOR="#0066CC">Translation Services</FONT></strong></h2>
+							<h2><strong>Translation Services</strong></h2>
 						</header>
 						</div>
 						<div class="row aln-center">
