--- a/index.html
+++ b/index.html
@@ -38,14 +38,18 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
+							<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> 
+
+<div class="first-container">
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
     						        <p class="ml6">
   								<span class="text-wrapper">
     									<span class="letters">Translating more than words</span>
   								</span>
 							</p>
-
+						
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+	</div>
 
 						<!-- Nav -->
 							<nav id="nav">
