--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3><FONT COLOR="#3153c6">Translation</FONT></h3>
+											<h3><FONT COLOR="#385fda">Translation</FONT></h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
 										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment. All documents will remain strictly confidential.</p>
