--- a/index.html
+++ b/index.html
@@ -205,6 +205,19 @@
 											<div class="js-show-on-scroll">
 											<h3>Every project is special.</h3>
 											</div>
+												<div class="sp-container">
+												<div class="sp-content">
+												<div class="sp-globe"></div>
+												<h2 class="frame-1">ENJOY</h2>
+												<h2 class="frame-2">YOUR</h2>
+												<h2 class="frame-3">SHOW</h2>
+
+												<h2 class="frame-5">
+												<span>QUALITY,</span>
+												<span>PASSION,</span>
+												<span>EXPERIENCE.</span>
+												</h2>
+												</div>
 											<ul class="actions">
 												<li><a href="https://alptra.github.io/right-sidebar.html" class="button">Continue Reading</a></li>
 											</ul>
