--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
 												<span>EXPERIENCE.</span>
 												</h2>
 												</div>
+												</div>
+												</div>
 											<ul class="actions">
 												<li><a href="https://alptra.github.io/right-sidebar.html" class="button">Continue Reading</a></li>
 											</ul>
