--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
 											<p></p>
 											</div>
 										</article>
-								</div>
-							.card
+									<!-- Post -->
+										<article>
+										.card
   .img 
     span
     span
@@ -231,6 +232,9 @@
     h2  MacBook Air
     h2 Lightness
     h4 The most loved Mac is about to make you fall in love all over again. Available in silver, space gray, and gold, the new thinner and lighter MacBook Air features a brilliant Retina display, Touch ID, the latest-generation keyboard, and a Force Touch trackpad
+										
+										</article>
+								</div>
 						</div>
 					</div>
 				</section>
