--- a/index.html
+++ b/index.html
@@ -222,17 +222,18 @@
 										</article>
 									<!-- Post -->
 										<article>
+										<div>
 										.card
-  .img 
-    span
-    span
-    span
-    span
-  .content
-    h2  MacBook Air
-    h2 Lightness
-    h4 The most loved Mac is about to make you fall in love all over again. Available in silver, space gray, and gold, the new thinner and lighter MacBook Air features a brilliant Retina display, Touch ID, the latest-generation keyboard, and a Force Touch trackpad
-										
+  										.img 
+    										span
+    										span
+    										span
+    										span
+  										.content
+    										h2  MacBook Air
+    										h2 Lightness
+    										h4 The most loved Mac is about to make you fall in love all over again. Available in silver, space gray, and gold, the new thinner and lighter MacBook Air features a brilliant Retina display, Touch ID, the latest-generation keyboard, and a Force Touch trackpad
+										</div>
 										</article>
 								</div>
 						</div>
