--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -164,6 +164,10 @@
 											<p></p>
 										</article>
 									
+									<!-- Post -->
+										<div id="bandeau_horizontal" style="position:relative;width:600px;height:150px;border:1px solid black;overflow:hidden;">
+</div>
+									
 								</div>
 						</div>
 					</div>
