--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -157,10 +157,10 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3><FONT COLOR="#0066CC">French language specialist</FONT></h3>
+											<h3><FONT COLOR="#0066CC">PROJECTS</FONT></h3>
 										</header>
   										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
-										<p>My name is Tony Foucart, I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
+										<p></p>
 		    								</div>
 									</section>
 
@@ -171,10 +171,10 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3><FONT COLOR="#0066CC">Translation</FONT></h3>
+											<h3><FONT COLOR="#0066CC"></FONT></h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
-										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment. All documents will remain strictly confidential.</p>
+										<p></p>
 		    								</div>
 									</section>
 
@@ -185,10 +185,10 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3><FONT COLOR="#0066CC">Proofreading</FONT></h3>
+											<h3><FONT COLOR="#0066CC"></FONT></h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
-										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked.</p>
+										<p></p>
 		    								</div>
 									</section>
 								
