--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -149,6 +149,16 @@
 										</section>
 
 								</div>
+			<!-- Features -->
+				<section id="features">
+					<div class="container">
+						<div class="js-show-on-scroll">
+						<header>
+							<h2><strong>Translation Services</strong></h2>
+						</header>
+						</div>
+						<div class="row aln-center">
+							<div class="col-4 col-6-medium col-12-small">
 							<!-- Features -->
 							<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -157,9 +167,9 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3><FONT COLOR="#0066CC">PROJECTS</FONT></h3>
+											<h3></h3>
 										</header>
-  										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
+  										<a href="#" class="image featured"><img src="images/pic10.jpg" alt="pen" style="border-radius: 2%"/></a>
 										<p></p>
 		    								</div>
 									</section>
@@ -173,7 +183,7 @@
 										<header>
 											<h3><FONT COLOR="#0066CC"></FONT></h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
+										<a href="#" class="image featured"><img src="images/pic11.jpg" alt="words" style="border-radius: 2%"/></a>
 										<p></p>
 		    								</div>
 									</section>
@@ -187,12 +197,14 @@
 										<header>
 											<h3><FONT COLOR="#0066CC"></FONT></h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
+										<a href="#" class="image featured"><img src="images/pic12.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
 										<p></p>
 		    								</div>
 									</section>
 								
 							</div>
+						</div>
+					</div>
 							
 							<!-- Content -->
 								<div id="content" class="">
