--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -154,7 +154,7 @@
 					<div class="container">
 						<div class="js-show-on-scroll">
 						<header>
-							<h2><strong>Translation Services</strong></h2>
+							<h2><strong>PROJECTS</strong></h2>
 						</header>
 						</div>
 						<div class="row aln-center">
