--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -159,9 +159,6 @@
 						</div>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
-							<!-- Features -->
-							<div class="row aln-center">
-							<div class="col-4 col-6-medium col-12-small">
 								
 								<!-- Feature -->
 									<section>
@@ -169,7 +166,7 @@
 										<header>
 											<h3></h3>
 										</header>
-  										<a href="#" class="image featured"><img src="images/pic10.jpg" alt="pen" style="border-radius: 2%"/></a>
+  										<a href="#" class="image featured"><img src="images/pic10.jpg" alt="spider" style="border-radius: 2%"/></a>
 										<p></p>
 		    								</div>
 									</section>
@@ -183,7 +180,7 @@
 										<header>
 											<h3><FONT COLOR="#0066CC"></FONT></h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/pic11.jpg" alt="words" style="border-radius: 2%"/></a>
+										<a href="#" class="image featured"><img src="images/pic11.jpg" alt="coffee" style="border-radius: 2%"/></a>
 										<p></p>
 		    								</div>
 									</section>
@@ -197,7 +194,7 @@
 										<header>
 											<h3><FONT COLOR="#0066CC"></FONT></h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/pic12.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
+										<a href="#" class="image featured"><img src="images/pic12.jpg" alt="phone" height= "239.7" style="border-radius: 2%"/></a>
 										<p></p>
 		    								</div>
 									</section>
