--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -194,7 +194,7 @@
 										<header>
 											<h3><FONT COLOR="#0066CC"></FONT></h3>
 										</header>
-										<a href="#" class="image featured"><img src="images/pic12.jpg" alt="phone" height= "239.7" style="border-radius: 2%"/></a>
+										<a href="#" class="image featured"><img src="images/pic.jpg" alt="phone" height= "239.7" style="border-radius: 2%"/></a>
 										<p></p>
 		    								</div>
 									</section>
