--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -89,64 +89,41 @@
 											<p></p>
 										</article>
 									
-								</div>
+									<!-- Post -->
+										<article class="box post">
+											<header>
+												<span class="date">A bit of history</span>
+												<h3><a href="#"></a></h3>
+											</header>
+											<p>Considering mankind's ability to develop cars that can drive without human interaction and computers that win chess games against the best human players, one would think we'd be able to solve the problem of a universal communication for ourselves. Language is one of the most essential parts of our heritage and culture. Translation with the help of machines seems to be the most obvious and desirable way to achieve this. So we began asking computers to help us communicate. But even now, with computers that can perform an exaFLOP-- which is a billion, billion operations per second-- we haven't reached the goal of a universal communication solution. When talking about machine translation, the earliest example that is always mentioned is the attempt to translate Russian into English during the Cold War. In 1954, IBM and Georgetown University succeeded in machine translating more than 60 sentences with only 6 grammar rules and 250 lexical items in the computer's vocabulary. After some time, the first rules-based machine translation engine, or RbMT engine, was developed in the early 1970s.</p>
+										</article>
 
-							<!-- Sidebar -->
-								<div id="sidebar" class="col-4 col-12-medium">
+									<!-- Post -->
+										<article class="box excerpt">
+											<header>
+												<span class="date">A few reminders</span>
+												<h3><a href="#"></a></h3>
+											</header>
+											<p>An anagram is a word or phrase made by using the letters of another word or phrase in a different order, such as « migraine » and « imaginer ». Throughout his career as a burglar, Maurice Leblanc's gentleman Arsène Lupin used anagrams: Paule Sinner, Prince Paul Sernine, and Don Luis Perenna. In the movie <i>Silence of the lambs</i>, Faust Federel is an anagram for « sulfate de fer ». A holorime is a form of rhyme where two very similar sequences of sounds can form phrases composed of different words and with different meanings: « Et ma blême araignée, ogre illogique et las | Aimable, aime à régner, au gris logis qu’elle a », by Victor Hugo. A pun is a humorous use of a word or phrase that sounds like another. The word « calembour » in French, was invented by Denis Diderot. « De deux choses lune, l’autre c’est le soleil » wrote Jacques Prévert. I close with some oddities of the French language: the masculine noun « scarabée » end with « ée » and the word « les ténèbres » only exist in plural form.</p>
+										</article>
 
-									<!-- Excerpts -->
-										<section>
-											<ul class="divided">
-												<li>
+									<!-- Post -->
+										<article class="box excerpt">
+											<header>
+												<span class="date">Something to chew on</span>
+												<h3><a href="#"></a></h3>
+											</header>
+											<p>Eugène Poubelle was born to a bourgeois family in Caen. He studied to become a lawyer and obtained a PhD. He became Préfet of the Seine département and on March 7th, 1884 Poubelle decreed that owners of buildings must provide their residents with three covered containers of 40 to 120 litres to hold household refuse. The refuse was to be sorted into compostable items, paper and cloth, and crockery and shells. The population of Paris, close to two million, needed a system to empty the containers regularly. Parisians began to name their boxes after Poubelle, a habit encouraged by the newspaper <i>Le Figaro</i>, which called them Boîtes Poubelle. Poubelle's surname remains the most common French word for a bin.</p>
+										</article>
 
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">A bit of history</span>
-																<h3><a href="#"></a></h3>
-															</header>
-															<p>Considering mankind's ability to develop cars that can drive without human interaction and computers that win chess games against the best human players, one would think we'd be able to solve the problem of a universal communication for ourselves. Language is one of the most essential parts of our heritage and culture. Translation with the help of machines seems to be the most obvious and desirable way to achieve this. So we began asking computers to help us communicate. But even now, with computers that can perform an exaFLOP-- which is a billion, billion operations per second-- we haven't reached the goal of a universal communication solution. When talking about machine translation, the earliest example that is always mentioned is the attempt to translate Russian into English during the Cold War. In 1954, IBM and Georgetown University succeeded in machine translating more than 60 sentences with only 6 grammar rules and 250 lexical items in the computer's vocabulary. After some time, the first rules-based machine translation engine, or RbMT engine, was developed in the early 1970s.</p>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">A few reminders</span>
-																<h3><a href="#"></a></h3>
-															</header>
-															<p>An anagram is a word or phrase made by using the letters of another word or phrase in a different order, such as « migraine » and « imaginer ». Throughout his career as a burglar, Maurice Leblanc's gentleman Arsène Lupin used anagrams: Paule Sinner, Prince Paul Sernine, and Don Luis Perenna. In the movie <i>Silence of the lambs</i>, Faust Federel is an anagram for « sulfate de fer ». A holorime is a form of rhyme where two very similar sequences of sounds can form phrases composed of different words and with different meanings: « Et ma blême araignée, ogre illogique et las | Aimable, aime à régner, au gris logis qu’elle a », by Victor Hugo. A pun is a humorous use of a word or phrase that sounds like another. The word « calembour » in French, was invented by Denis Diderot. « De deux choses lune, l’autre c’est le soleil » wrote Jacques Prévert. I close with some oddities of the French language: the masculine noun « scarabée » end with « ée » and the word « les ténèbres » only exist in plural form.</p>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">Something to chew on</span>
-																<h3><a href="#"></a></h3>
-															</header>
-															<p>Eugène Poubelle was born to a bourgeois family in Caen. He studied to become a lawyer and obtained a PhD. He became Préfet of the Seine département and on March 7th, 1884 Poubelle decreed that owners of buildings must provide their residents with three covered containers of 40 to 120 litres to hold household refuse. The refuse was to be sorted into compostable items, paper and cloth, and crockery and shells. The population of Paris, close to two million, needed a system to empty the containers regularly. Parisians began to name their boxes after Poubelle, a habit encouraged by the newspaper <i>Le Figaro</i>, which called them Boîtes Poubelle. Poubelle's surname remains the most common French word for a bin.</p>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">Can you solve this mystery?</span>
-																<h3><a href="#"></a></h3>
-															</header>
-															<p>Un soir d’été, un roi fût décapité. Trois moines eurent la tête tranchée. Le lendemain, on ne retrouva qu’un seul corps. Pourquoi ?</p>
-														</article>
-
-												</li>
-											</ul>
-										</section>
+									<!-- Post -->
+										<article class="box excerpt">
+											<header>
+												<span class="date">Can you solve this mystery?</span>
+												<h3><a href="#"></a></h3>
+											</header>
+											<p>Un soir d’été, un roi fût décapité. Trois moines eurent la tête tranchée. Le lendemain, on ne retrouva qu’un seul corps. Pourquoi ?</p>
+										</article>
 
 								</div>
 							
