--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -89,7 +89,7 @@
 										</article>
 									
 									<!-- Post -->
-										<article class="box post">
+										<article class="box excerpt">
 											<header>
 												<span class="date">A bit of history</span>
 												<h3><a href="#"></a></h3>
