--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -63,7 +63,8 @@
 						<div class="row">
 
 							<!-- Content -->
-
+								<div id="content" class="medium">
+									
 									<!-- Post -->
 										<article class="box post">
 											<header>
