--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -63,7 +63,7 @@
 						<div class="row">
 
 							<!-- Content -->
-								<div id="content" class="col-8 col-12-medium" align="center">
+								<div id="content" class="col-8 col-12-medium center-block">
 									
 									<!-- Post -->
 										<article class="box post">
