--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						<div class="row">
 							
 							<!-- Content -->
-								<div id="content" class="col-12-medium">
+								<div id="content" class="col-8 col-12-medium">
 
 									<!-- Post -->
 										<article class="box post">
@@ -166,17 +166,11 @@
 											<header>
 												<h3><a href="#">Voice over</a></h3>
 											</header>
-											<a href="#" class="image left"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
+											<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
 											<p>Record your production in French. We help make your project sound great.</p>
-										</article>
-											
-									<!-- Post -->
-										<article class="box post">
-											<div class="js-show-on-scroll">
 											<header>
 												<h3><a href="#">Transcription</a></h3>
 											</header>
-											<a href="#" class="image left"><img src="images/pic07.jpg" alt="" style="border-radius: 2%"/></a>
 											<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
 										</article>
 			
