--- a/index.html
+++ b/index.html
@@ -164,13 +164,10 @@
 										<article class="box post">
 											<div class="js-show-on-scroll">
 											<header>
-												<h3><a href="#">Voice over</a></h3>
+												<h3><a href="#">Voice over & Transcription</a></h3>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
 											<p>Record your production in French. We help make your project sound great.</p>
-											<header>
-												<h3><a href="#">Transcription</a></h3>
-											</header>
 											<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
 										</article>
 			
