--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						<div class="row">
 							
 							<!-- Content -->
-								<div id="content" class="col-8 col-12-medium">
+								<div class="col-12">
 
 									<!-- Post -->
 										<article class="box post">
