--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
 						<div class="row">
 							
 							<!-- Content -->
-								<div class="col-12">
 
 									<!-- Post -->
 										<article class="box post">
@@ -174,9 +173,9 @@
 								</div>
 							
 							<!-- Content -->
-								<div id="content" class="col-8 col-12-medium">
 
 									<!-- Post -->
+										<div class="col-12">
 										<article class="box post">
 											<div class="js-show-on-scroll">
 											<h3>Every project is special.</h3>
@@ -185,6 +184,7 @@
 												<li><a href="https://alptra.github.io/right-sidebar.html" class="button">Continue Reading</a></li>
 											</ul>
 										</article>
+										</div>
 									<!-- Post -->
 										<article class="box post">
 											<div class="js-show-on-scroll">
