--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
 												<h3><a href="#">Voice over & Transcription</a></h3>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
-											<p>Record your production in French. We help make your project sound great.</p>
-											<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
+											<p>Record your production in French. We help make your project sound great. Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
 										</article>
 			
 								</div>
