--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 								</div>
 							
 							<!-- Content -->
+								<div id="content" class="col-8 col-12-medium">
 
 									<!-- Post -->
 										<article class="box post">
@@ -193,6 +194,7 @@
 											<p></p>
 											</div>
 										</article>
+								</div>
 						</div>
 					</div>
 				</section>
