--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -72,8 +72,8 @@
 											<span class="image featured"><img src="images/pic08.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>Constraints are fun?</h3>
 											<p>The job of localization is to give a product the look and feel of having been created specifically for a target population, whatever their language, culture, or location. Translation is a piece of the overall localization workflow. For localized products, we translators work on very different types of content and different file types, such as image files, audio files, video files, software resource files, XML files, and HTML files. And we work for different clients with very different expectations. Audio obviously has to be recorded in each target language if it is supposed to be localized. The challenge here is how to translate the script for the audio. Text that is going to be read out loud needs to have a high degree of fluidity. Tongue-twisters have no place in a script for video voiceover. Super long sentences aren't a good fit for a localized podcast. Often, there is also the challenge of timing, since a lot of audio is actually used with video. The voiceover has to match the shown content. In the movie, a voice talent for the target language cannot speak longer than the person shown. Similar timing considerations apply for subtitles. In this case, it is the amount of time needed for reading the shown text that constrains how long it can be. French needs more words than the English language to convey the same meaning. So it's not easy, but it is definitely fun!</p>
-											<h3></h3>
-											<p></p>
+											<h3>A bit of history</h3>
+											<p>Considering mankind's ability to develop cars that can drive without human interaction and computers that win chess games against the best human players, one would think we'd be able to solve the problem of a universal communication for ourselves. Language is one of the most essential parts of our heritage and culture. Translation with the help of machines seems to be the most obvious and desirable way to achieve this. So we began asking computers to help us communicate. But even now, with computers that can perform an exaFLOP-- which is a billion, billion operations per second-- we haven't reached the goal of a universal communication solution. When talking about machine translation, the earliest example that is always mentioned is the attempt to translate Russian into English during the Cold War. In 1954, IBM and Georgetown University succeeded in machine translating more than 60 sentences with only 6 grammar rules and 250 lexical items in the computer's vocabulary. After some time, the first rules-based machine translation engine, or RbMT engine, was developed in the early 1970s.</p>
 										</article>
 
 									<!-- Post -->
@@ -84,30 +84,12 @@
 											<span class="image featured"><img src="images/pic09.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>The golden rules</h3>
 											<p>We translators must follow style guides, so that you can watch your favorite shows with subtitles translated (with accuracy hopefully) in the language of your choice. Style guides are materials that tend to change the least often. That being said, because a style guide contains key guidelines that influence every part of the translation, it will not just talk about how to handle things that exist in the English language. It's going to contain sections that deal with recommended style for handling grammatical categories and sentence structures that do not have any equivalent in the source language. One example would be how to handle verb tenses and verb forms. It will also help the translator in adapting the tone and style to the target market. For example, French audience will have a different perception of how much informal is too informal then, for example, people in Italy. The English language is more polite, French is more direct. A tweak in tone to achieve a similar communicative effect is often a good idea, even when adapting just within one language such as between American English and English for UK. Being too literal can destroy the meaning, being too adaptive can also destroy the meaning. It is a fine line between the two. What I've written just scratches the surface. What other points can you add to this list that I may have not mentioned?</p>
-											<h3></h3>
-											<p></p>
-										</article>
-									
-									<!-- Post -->
-										<article class="box excerpt">
-											<header>
-												<span class="date">A bit of history</span>
-												<h3><a href="#"></a></h3>
-											</header>
-											<p>Considering mankind's ability to develop cars that can drive without human interaction and computers that win chess games against the best human players, one would think we'd be able to solve the problem of a universal communication for ourselves. Language is one of the most essential parts of our heritage and culture. Translation with the help of machines seems to be the most obvious and desirable way to achieve this. So we began asking computers to help us communicate. But even now, with computers that can perform an exaFLOP-- which is a billion, billion operations per second-- we haven't reached the goal of a universal communication solution. When talking about machine translation, the earliest example that is always mentioned is the attempt to translate Russian into English during the Cold War. In 1954, IBM and Georgetown University succeeded in machine translating more than 60 sentences with only 6 grammar rules and 250 lexical items in the computer's vocabulary. After some time, the first rules-based machine translation engine, or RbMT engine, was developed in the early 1970s.</p>
-										</article>
-
-									<!-- Post -->
-										<article class="box excerpt">
-											<header>
-												<span class="date">A few reminders</span>
-												<h3><a href="#"></a></h3>
-											</header>
+											<h3>A few reminders</h3>
 											<p>An anagram is a word or phrase made by using the letters of another word or phrase in a different order, such as « migraine » and « imaginer ». Throughout his career as a burglar, Maurice Leblanc's gentleman Arsène Lupin used anagrams: Paule Sinner, Prince Paul Sernine, and Don Luis Perenna. In the movie <i>Silence of the lambs</i>, Faust Federel is an anagram for « sulfate de fer ». A holorime is a form of rhyme where two very similar sequences of sounds can form phrases composed of different words and with different meanings: « Et ma blême araignée, ogre illogique et las | Aimable, aime à régner, au gris logis qu’elle a », by Victor Hugo. A pun is a humorous use of a word or phrase that sounds like another. The word « calembour » in French, was invented by Denis Diderot. « De deux choses lune, l’autre c’est le soleil » wrote Jacques Prévert. I close with some oddities of the French language: the masculine noun « scarabée » end with « ée » and the word « les ténèbres » only exist in plural form.</p>
 										</article>
 
 									<!-- Post -->
-										<article class="box excerpt">
+										<article class="box post">
 											<header>
 												<span class="date">Something to chew on</span>
 												<h3><a href="#"></a></h3>
@@ -116,7 +98,7 @@
 										</article>
 
 									<!-- Post -->
-										<article class="box excerpt">
+										<article class="box post">
 											<header>
 												<span class="date">Can you solve this mystery?</span>
 												<h3><a href="#"></a></h3>
