--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -97,6 +97,8 @@
 											<p>Eugène Poubelle was born to a bourgeois family in Caen. He studied to become a lawyer and obtained a PhD. He became Préfet of the Seine département and on March 7th, 1884 Poubelle decreed that owners of buildings must provide their residents with three covered containers of 40 to 120 litres to hold household refuse. The refuse was to be sorted into compostable items, paper and cloth, and crockery and shells. The population of Paris, close to two million, needed a system to empty the containers regularly. Parisians began to name their boxes after Poubelle, a habit encouraged by the newspaper <i>Le Figaro</i>, which called them Boîtes Poubelle. Poubelle's surname remains the most common French word for a bin.</p>
 										</article>
 
+								<div id="content" class="col-8 col-12-medium">
+									
 									<!-- Post -->
 										<article class="box post">
 											<header>
@@ -105,11 +107,6 @@
 											</header>
 											<p>Un soir d’été, un roi fût décapité. Trois moines eurent la tête tranchée. Le lendemain, on ne retrouva qu’un seul corps. Pourquoi ?</p>
 										</article>
-
-								</div>
-							
-							<!-- Content -->
-								<div id="content" class="">
 
 									<!-- Post -->
 										<article class="box post">
