--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -87,24 +87,18 @@
 											<h3>A few reminders</h3>
 											<p>An anagram is a word or phrase made by using the letters of another word or phrase in a different order, such as « migraine » and « imaginer ». In the movie <i>Silence of the lambs</i>, Faust Federel is an anagram for « sulfate de fer ». Throughout his career as a burglar, Maurice Leblanc's gentleman Arsène Lupin used anagrams: Paule Sinner, Prince Paul Sernine, and Don Luis Perenna. A holorime is a form of rhyme where two very similar sequences of sounds can form phrases composed of different words and with different meanings: « Et ma blême araignée, ogre illogique et las | Aimable, aime à régner, au gris logis qu’elle a », by Victor Hugo. A pun is a humorous use of a word or phrase that sounds like another. The word « calembour » in French, was invented by Denis Diderot. « De deux choses lune, l’autre c’est le soleil » wrote Jacques Prévert. I close with some oddities of the French language: the masculine noun « scarabée » end with « ée » and the word « les ténèbres » only exist in plural form.</p>
 										</article>
-
-									<!-- Post -->
-										<article class="box post">
-											<header>
-												<h3>Something to chew on</h3>
-												<h3><a href="#"></a></h3>
-											</header>
-											<p>Eugène Poubelle was born to a bourgeois family in Caen. He studied to become a lawyer and obtained a PhD. He became Préfet of the Seine département and on March 7th, 1884 Poubelle decreed that owners of buildings must provide their residents with three covered containers of 40 to 120 litres to hold household refuse. The refuse was to be sorted into compostable items, paper and cloth, and crockery and shells. The population of Paris, close to two million, needed a system to empty the containers regularly. Parisians began to name their boxes after Poubelle, a habit encouraged by the newspaper <i>Le Figaro</i>, which called them Boîtes Poubelle. Poubelle's surname remains the most common French word for a bin.</p>
-										</article>
-
+								
 								<div id="content" class="col-8 col-12-medium">
 									
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h3>Can you solve this mystery?</h3>
-												<h3><a href="#"></a></h3>
-											</header>
+												<h2><FONT COLOR="#0B8484">The oddities of the French language.</FONT></h2>
+											</header>	
+											<span class="image featured"><img src="images/pic10.jpg" alt="" style="border-radius: 2%"/></span>
+											<h3>Something to chew on</h3>
+											<p>Eugène Poubelle was born to a bourgeois family in Caen. He studied to become a lawyer and obtained a PhD. He became Préfet of the Seine département and on March 7th, 1884 Poubelle decreed that owners of buildings must provide their residents with three covered containers of 40 to 120 litres to hold household refuse. The refuse was to be sorted into compostable items, paper and cloth, and crockery and shells. The population of Paris, close to two million, needed a system to empty the containers regularly. Parisians began to name their boxes after Poubelle, a habit encouraged by the newspaper <i>Le Figaro</i>, which called them Boîtes Poubelle. Poubelle's surname remains the most common French word for a bin.</p>
+											<h3>Can you solve this mystery?</h3>
 											<p>Un soir d’été, un roi fût décapité. Trois moines eurent la tête tranchée. Le lendemain, on ne retrouva qu’un seul corps. Pourquoi ?</p>
 										</article>
 
