--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@
 											<p>Record your production in French. We help make your project sound great. Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
 											</div>
 										</article>
-							</div>
+						</div>
 							
+						<div class="row">
 							<!-- Content -->
 								<div id="content" class="col-8 col-12-medium">
 
