--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3>French language specialist</h3>
+											<h3><font color="0066CC">French language specialist</font></h3>
 										</header>
   										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
 										<p>My name is Tony Foucart, I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
@@ -86,7 +86,7 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3>Translation</h3>
+											<h3><font color="0066CC">Translation</font></h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
 										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment. All documents will remain strictly confidential.</p>
@@ -100,7 +100,7 @@
 									<section>
                 								<div class="js-show-on-scroll">
 										<header>
-											<h3>Proofreading</h3>
+											<h3><font color="0066CC">Proofreading</font></h3>
 										</header>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
 										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked.</p>
