--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -105,8 +105,8 @@
 											<header>
 												<h2></h2>
 											</header>
-											<h3>About</h3>
-											<p><FONT COLOR="#1D1D1F"><i>Tony Foucart is the founder of Alptra. He is a freelance translator, and proofreader. He has worked on a broad range of projects, from newspaper articles to classic animations and movies subtitles. He takes pride in being reliable and trustworthy, and in providing his clients with qualitative authentic contents. In his free time you might find him hiking the Mont Blanc, reading Émile Zola or exploring great museums.</i></FONT></p>
+											<h3><FONT COLOR="#1D1D1F">About</FONT></h3>
+											<p><i>Tony Foucart is the founder of Alptra. He is a freelance translator, and proofreader. He has worked on a broad range of projects, from newspaper articles to classic animations and movies subtitles. He takes pride in being reliable and trustworthy, and in providing his clients with qualitative authentic contents. In his free time you might find him hiking the Mont Blanc, reading Émile Zola or exploring great museums.</i></p>
 											<h3></h3>
 											<p></p>
 										</article>
