--- a/index.html
+++ b/index.html
@@ -258,6 +258,9 @@
 						<ul class="links">
 							<li>&copy; Alptra. All rights reserved.</li>
 						</ul>
+						<ul class="links">
+							<li><a href="#">Legal notice</a></li>
+						</ul>
 					</div>
 				</section>
 
