--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 							<li>&copy; Alptra. All rights reserved.</li>
 						</ul>
 						<ul class="links">
-							<li><a href="#">Legal notice</a></li>
+							<li><a href="#">Legal Notice</a></li>
 						</ul>
 					</div>
 				</section>
