--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -174,6 +174,9 @@
 						<ul class="links">
 							<li>&copy; Alptra. All rights reserved.</li>
 						</ul>
+						<ul class="links">
+							<li><a href="#">Legal Notice</a></li>
+						</ul>
 					</div>
 				</section>
 
