--- a/index.html
+++ b/index.html
@@ -256,10 +256,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Alptra. All rights reserved.</li>
-						</ul>
-						<ul class="links">
-							<li><a href="#">Legal Notice</a></li>
+							<li>&copy; Alptra. All rights reserved.<a href="#">Legal Notice</a></li>
 						</ul>
 					</div>
 				</section>
