--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -172,7 +172,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Alptra. All rights reserved.<a href="#"> Legal Notice</a></li>
+							<li>&copy; Alptra. All rights reserved.<a href="Legal-Notice.html"> Legal Notice</a></li>
 						</ul>
 					</div>
 				</section>
