--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -63,21 +63,27 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><FONT COLOR="#0B8484"><strong><FONT COLOR="#0B8484"></FONT></strong>!</FONT></h2>
+												<h2><FONT COLOR="#1d1d1f"><strong>COMPANY</strong></FONT></h2>
 											</header>
 											<h3></h3>
-											<p></p>
+											<p>M. Tony FOUCART
+											<br>267 rue de la Piat
+											<br>73260 Grand-Aigueblanche</p>
 											<h3></h3>
-											<p></p>
+											<p>SIRET NUMBER
+											<br>VAT NUMBER
+											<br>SOLE PROPRIETORSHIP - ENTREPRISE INDIVIDUELLE</p>
 										</article>
 
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><FONT COLOR="#0B8484"></FONT></h2>
+												<h2><FONT COLOR="#1d1d1f">Hosting providers</FONT></h2>
 											</header>
 											<h3></h3>
-											<p></p>
+											<p>GitHub Pages, a service of GitHub, Inc
+											<br>88 Colin P Kelly Jr St, San Francisco, CA 94107, United States
+											<br>+1 877 448-4820</p>
 											<h3></h3>
 											<p></p>
 										</article>
@@ -85,7 +91,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><FONT COLOR="#0B8484"></FONT></h2>
+												<h2><FONT COLOR="#1d1d1f"></FONT></h2>
 											</header>
 											<h3></h3>
 											<p></p>
@@ -107,3 +113,13 @@
 						</div>
 					</div>
 				</section>
+			<!-- Footer -->
+				<section id="footer">
+					<div id="copyright" class="container">
+						<ul class="links">
+							<li>&copy; Alptra. All rights reserved.<a href="Legal-Notice.html"> Legal Notice</a></li>
+						</ul>
+					</div>
+				</section>
+
+		</div>
