--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -106,7 +106,7 @@
 				<section id="footer">
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Alptra. All rights reserved.<a href="Legal-Notice.html"> Legal Notice</a></li>
+							<li>&copy; Alptra. All rights reserved.</li>
 						</ul>
 					</div>
 				</section>
