--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -65,7 +65,7 @@
 											<header>
 												<h2><FONT COLOR="#1d1d1f"><strong>COMPANY</strong></FONT></h2>
 											</header>
-											<h3></h3>
+											<h3>COMPANY</h3>
 											<p>M. Tony FOUCART
 											<br>267 rue de la Piat
 											<br>73260 Grand-Aigueblanche</p>
