--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -63,9 +63,9 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><FONT COLOR="#1d1d1f"><strong>COMPANY</strong></FONT></h2>
+												<h2><FONT COLOR="#1d1d1f">COMPANY</FONT></h2>
 											</header>
-											<h3>COMPANY</h3>
+											<h3></h3>
 											<p>M. Tony FOUCART
 											<br>267 rue de la Piat
 											<br>73260 Grand-Aigueblanche</p>
@@ -79,6 +79,9 @@
 											<p>GitHub Pages, a service of GitHub, Inc
 											<br>88 Colin P Kelly Jr St, San Francisco, CA 94107, United States
 											<br>+1 877 448-4820</p>
+											<header>
+												<h2><FONT COLOR="#1d1d1f">Intellectual Property</FONT></h2>
+											</header>
 											<h3>Intellectual Property</h3>
 											<p>Except for explicitly licensed elements, all information on this web site is protected by the copyrights held by Alptra.
 											Therefore, the information may not be reproduced, modified, republished, re-aired, translated, distributed or reused in any manner, without the written consent of Alptra.
